--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,10 +27,10 @@ dependencies:
   cupertino_icons: ^1.0.0
 
 dev_dependencies:
-  build_runner:
   flutter_test:
     sdk: flutter
   auto_route_generator: ^0.6.10
+  build_runner: null
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -61,6 +61,10 @@ flutter:
           weight: 600
         - asset: assets/fonts/SF-Pro-Rounded-Heavy.otf
           weight: 900
+    - family: SF Pro Text
+      fonts:
+        - asset: assets/fonts/SF-Pro-Text-Semibold.otf
+          weight: 600
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
