completed dish search impl

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,6 +71,8 @@ flutter:
       fonts:
         - asset: assets/fonts/SF-Pro-Text-Semibold.otf
           weight: 600
+        - asset: assets/fonts/SF-Pro-Text-Regular.otf
+          weight: 400
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
