--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   auto_route: ^0.6.9
   cupertino_icons: ^1.0.0
   json_annotation: ^3.1.1
+  smooth_page_indicator: ^0.2.0
 
 dev_dependencies:
   flutter_test:
