--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
     sdk: flutter
   auto_route: ^0.6.9
   cupertino_icons: ^1.0.0
+  intl: ^0.16.1
   json_annotation: ^3.1.1
   smooth_page_indicator: ^0.2.0
 
