--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,8 +25,10 @@ dependencies:
     sdk: flutter
   auto_route: ^0.6.9
   cupertino_icons: ^1.0.0
+  flutter_slidable: ^0.5.7
   intl: ^0.16.1
   json_annotation: ^3.1.1
+  provider: ^4.3.3
   smooth_page_indicator: ^0.2.0
 
 dev_dependencies:
