impl delivery checkout screen

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,6 +75,8 @@ flutter:
       fonts:
         - asset: assets/fonts/SF-Pro-Text-Semibold.otf
           weight: 600
+        - asset: assets/fonts/SF-Pro-Text-Medium.otf
+          weight: 500
         - asset: assets/fonts/SF-Pro-Text-Regular.otf
           weight: 400
   #   - family: Trajan Pro
