--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -79,6 +79,14 @@ flutter:
           weight: 500
         - asset: assets/fonts/SF-Pro-Text-Regular.otf
           weight: 400
+    - family: Poppins
+      fonts:
+        - asset: assets/fonts/Poppins-Semibold.ttf
+          weight: 600
+        - asset: assets/fonts/Poppins-Medium.ttf
+          weight: 500
+        - asset: assets/fonts/Poppins-Regular.ttf
+          weight: 400
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
